Add Decap CMS admin panel

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,6 +1,8 @@
 backend:
   name: git-gateway
   branch: main # or master, depending on your repo
+  site_url: https://hanifalleya.netlify.app  # Add this line
+
 
 # Uncomment if using Netlify
 # publish_mode: editorial_workflow
