--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,12 +1,9 @@
 backend:
-  name: git-gateway
-  branch: main # or master, depending on your repo
+  name: github
+  repo: alleyahn/digital-garden  # e.g., alleya/digital-garden-blog
+  branch: main
 
-site_url: https://hanifalleya.netlify.app  # Add this line
-
-
-# Uncomment if using Netlify
-# publish_mode: editorial_workflow
+site_url: https://hanifalleya.netlify.app
 
 media_folder: "public/stories"
 public_folder: "/stories"
